--- a/css/main.css
+++ b/css/main.css
@@ -172,6 +172,51 @@ body {
 .menu-link:hover::after {
     width: 100%;
 }
-
-
 /* SITE-HEADER */
+
+/* SITE-HERO */
+
+.site-hero {
+    width: 100%;
+    height: 640px;
+    position: relative;
+}
+.site-hero__banner {
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    object-fit: cover;
+}
+.site-hero__content {
+    width: 100%;
+    height: 100%;
+    background: rgba(7, 15, 25, 0.75);
+    display: flex;
+    align-items: center;
+}
+
+.site-hero__title {
+    color: var(--white);
+    font-size: 64px;
+    font-weight: 700;
+    text-transform: capitalize;
+}
+.site-hero__desc {
+    margin-top: 30px;
+    margin-bottom: 50px;
+    max-width: 570px;
+    width: 100%;
+    color: #C8C8C8;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 24px;
+    text-align: justify;
+
+}
+.site-hero__button {
+    display: flex;
+    column-gap: 30px;
+}
+/* SITE-HERO */
