--- a/css/main.css
+++ b/css/main.css
@@ -86,10 +86,14 @@ body {
     text-transform: capitalize;
     border-bottom: 2px solid var(--primary-orange);
     margin-bottom: 52px;
-
+    width: max-content;
 }
 
 /* SITE-ADS */
+
+.site-ads-header-hero {
+    overflow: hidden;
+}
 
 .site-ads {
     display: block;
@@ -220,3 +224,328 @@ body {
     column-gap: 30px;
 }
 /* SITE-HERO */
+
+/* site-main */
+.films {
+    padding-top: 60px;
+    padding-bottom: 77px;
+}
+
+.films-cards {
+    display: flex;
+    column-gap: 30px;
+}
+.films-card {
+    max-width: 255px;
+    width: 100%;
+    height: 367px;
+    position: relative;
+    border-radius: 6px;
+    overflow: hidden;
+}
+.films-card__image {
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+.films-card__content {
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(180deg, rgba(241, 129, 40, 0.35) 0%, rgba(0, 0, 0, 0.71) 51.04%, rgba(7, 15, 25, 0.80) 100%);
+    padding-left: 14px;
+    padding-right: 14px;
+    padding-bottom: 18px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: center;
+
+}
+.films-card__link {
+    color: var(--white);
+}
+
+.films-card_time {
+    display: block;
+    width: 100px;
+    padding-top: 7px;
+    padding-bottom: 7px;
+    border: 1px solid var(--white);
+    border-radius: 9px;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 10px;
+    text-align: center;
+    color: var(--white);
+    margin-top: 12px;
+    margin-bottom: 30px;
+
+}
+.films-card__name {
+    color: var(--white);
+    font-size: 22px;
+    font-weight: 400;
+    font-family: var(--Comfortaa);
+}
+.films-card__desc {
+    color: var(--white);
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 21px;
+    font-family: var(--Roboto);
+    margin-top: 12px;
+
+}
+
+/* PRIMIERS- SECTION */
+.primiers {
+    position: relative;
+    width: 100%;
+    height: 500px;
+}
+.primiers-video {
+    position: absolute;
+    right: 0;
+    top: 0;
+    z-index: -1;
+    height: 100%;
+    object-fit: cover;
+}
+.primiers-content {
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(90deg, #DEF7FF 0%, #F4FCFF 45.64%, rgba(255, 255, 255, 0.00) 100.72%);
+    display: flex;
+    align-items: center;
+    row-gap: 53px;
+}
+.primiers-desc {
+    max-width: 558px;
+    width: 100%;
+    font-family: var(--Roboto);
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 27px;
+    margin-top: 50px;
+    margin-bottom: 55px;
+    text-align: justify;
+}
+.primiers-btn {
+}
+.all-btn {
+}
+
+/* PRIMIERS- SECTION */
+
+/* COLLECTION-SECTION */
+.collections {
+    padding-top: 60px;
+    padding-bottom: 60px;
+}
+
+.coolections-cards {
+    display: flex;
+    column-gap: 30px;
+}
+.collections-card {
+    max-width: 350px;
+    width: 100%;
+    height: 193px;
+    position: relative;
+    border-radius: 6px;
+    overflow: hidden;
+}
+.collections-card__image {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    left: 0;
+    top: 0;
+    z-index: -1;
+}
+.collection-card__content { 
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    row-gap: 15px;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(270deg, rgba(7, 15, 25, 0.56) 0%, rgba(49, 114, 9, 0.56) 100%);
+    position: relative;
+}
+.collection-card__link {
+    color: var(--white);
+    transition: .5s;
+}
+
+.collection-card__title {
+    color: var(--white);
+    font-family: var(--Comfortaa);
+    font-size: 20px;
+    font-weight: 700;
+    transition: .5s;
+}
+/* animation */
+.collection-card__content:hover{
+    cursor: pointer;
+}
+.collection-card__content:hover .collection-card__link {
+    transform: scale(1.4);
+}
+.collection-card__content:hover .collection-card__title {
+    transform: scale(0);
+}
+
+/* COLLECTION-SECTION */
+
+/* after before */
+.collection-card__content::before{
+    content: url(../img/Выбрать.png);
+    display: block;
+    position: absolute;
+    left: 10px;
+    transition: 1s;
+}
+.collection-card__content::after{
+    content: url(../img/Выбрать.png);
+    display: block;
+    position: absolute;
+    right: 10px;
+    transition: 1s;
+}
+.collection-card__content:hover::before{
+    transform: translateY(110%);
+}
+.collection-card__content:hover::after{
+    transform: translateY(-110%);
+}
+
+
+
+/* SERIES SECTION */
+
+.series {
+    padding-bottom: 65px;
+}
+
+.series-lg {
+    width: 100%;
+    height: 436px;
+    position: relative;
+    border-radius: 6px;
+    overflow: hidden;
+}
+.series-lg__iamge {
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+.series-lg__content {
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(96deg, rgba(35, 35, 35, 0.80) 10.25%, rgba(11, 11, 11, 0.60) 110.25%);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    row-gap: 28px;
+    padding-left: 20px;
+    padding-right: 20px;
+
+}
+.series-lg__title {
+    color: var(--white);
+    font-family: var(--Comfortaa);
+    font-size: 40px;
+    font-weight: 700;
+}
+.series-lg__text {
+    color: var(--white);
+    font-family: var(--Comfortaa);
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 24px;
+    text-align: center;
+
+}
+
+/* SERIES SECTION */
+
+/* GRID */
+.series-grid {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(2,1fr);
+    gap: 30px;
+    padding-top: 30px;
+
+}
+
+.series-md {
+    max-width: 540px;
+    width: 100%;
+    height: 404px;
+    grid-row: span 2;
+    grid-column: span 2;
+}
+.series-card {
+    position: relative;
+}
+.item {
+    min-height: 190px;
+
+}
+.series-card__image {
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    width: 100%;
+    height: 100%;
+}
+.series-card__content {
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(96deg, rgba(35, 35, 35, 0.80) 0%, rgba(11, 11, 11, 0.60) 100%);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    row-gap: 20px;
+}
+.series-card__link {
+    color: var(--white);
+}
+
+.series-card__title {
+    font-family: var(--Comfortaa);
+    color: var(--white);
+    font-size: 24px;
+    font-weight: 700;
+    text-transform: capitalize;
+}
+
+.series-sm {
+    max-width: 255px;
+    width: 100%;
+    height: 183px;
+    grid-row: span 1;
+    grid-column: span 1;
+    overflow: hidden;
+    border-radius: 6px;
+}
+
+
+
+/* GRID */
+
+/* site-main */
