--- a/css/main.css
+++ b/css/main.css
@@ -549,3 +549,32 @@ body {
 /* GRID */
 
 /* site-main */
+
+/* site footer */
+
+.site-footer {
+    background: linear-gradient(90deg, #FF8C30 0%, #9F4700 100%);
+    box-shadow: drop-shadow(0px 0px 20px rgba(0, 0, 0, 0.80));
+   padding-top: 24px;
+   padding-bottom: 24px;
+
+}
+
+.mobile-responsive {
+}
+.footer-app {
+    display: flex;
+    align-items: center;
+    column-gap: 50px;
+}
+
+.footer-text {
+color: var(--white);
+font-size: 18px;
+font-weight: 700;
+font-family: var(--Comfortaa);
+letter-spacing: 0.18px;
+
+}
+
+/* site-fotter */
