--- a/css/media.css
+++ b/css/media.css
@@ -117,17 +117,18 @@
         grid-template-rows: repeat(4,1fr);
     }
 
-    .series-md {
+    .series-md  {
         max-width: unset;
         width: 100%;
-        grid-row: span2;
-        grid-column: span 4;
+        grid-row: span 2;
+        grid-column: span 6;
     }
     .series-sm {
         max-width: unset;
         width: 100%;
-        grid-row: span1;
-        grid-column: span2;
+        flex-wrap: wrap;
+        grid-row: span 1;
+        grid-column: span 2;
     }
 
     .series-card__image {
@@ -140,7 +141,7 @@
         display: flex;
         flex-direction: column;
         row-gap: 20px;
-        align-items: flex-start;
+        align-items: center;
 
     }
 }
